--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: sensitivitymv
 Type: Package
 Title: Sensitivity Analysis in Observational Studies
-Version: 1.2
-Date: 2013-11-20
+Version: 1.3
+Date: 2015-08-19
 Author: Paul R. Rosenbaum
 Maintainer: Paul R. Rosenbaum <rosenbaum@wharton.upenn.edu>
 Description: Sensitivity analysis in observational studies, including evidence factors and amplification, using the permutation distribution of Huber-Maritz M-statistics, including the permutational t-test.
 License: GPL-2
-LazyLoad: yes
-Packaged: 2013-11-20 18:30:58 UTC; rosenbap
+LazyData: TRUE
 NeedsCompilation: no
+Packaged: 2015-08-19 16:57:41 UTC; rosenbap
 Repository: CRAN
-Date/Publication: 2013-11-20 21:27:05
+Date/Publication: 2015-08-19 20:35:00
